--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#Services">Services</a></li>
                     <li><a href="#Portfolio">Portfolio</a></li>
                     <li><a href="#About">About</a></li>
-                    <li><a href="Contact">Contact</a></li>
+                    <li><a href="#Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
